CSCFAIRMETA-447: [FIX] comments, swagger and tests
- Cleared out comments
- Added parameter to v2 swagger
- Added tests to v2
